<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailMovie">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="18dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:layout_margin="20sp"
                    android:id="@+id/img_item"
                    tools:src="@android:color/white"/>
            </FrameLayout>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:text="@string/bioskop_name"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_light"
                tools:text="@string/price"
                android:layout_marginBottom="10dp"/>
            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

            </TableLayout>

            <TextView
                android:id="@+id/tv_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1"
                android:textColor="@android:color/black"
                tools:text="@string/detail"
                android:textSize="18sp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/tv_item_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:text="@string/time"
                android:textSize="18sp"
                android:layout_marginBottom="16dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/colorOrange"
                android:text="@string/beli"
                android:layout_marginBottom="25sp"/>

        </LinearLayout>


    </ScrollView>


</LinearLayout>